# RedBoxDb

./: .gitignore  ARCH.md  CHANGELOG.md  CMakeLists.txt  IVF_Clustering_Report.md  LastBenchmarkRun.md  README.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  deploy.yml  release.yml
Client/: benchmark.py  client.py  validation.py
benchmark/: CMakeLists.txt  bench_extended.cpp  bench_server_concurrent.cpp  benchmark.cpp  ci_bench.cpp  ci_bench.py  client_bench.py  insert_micro.cpp  qps_bench.cpp  recall_test.py  search_profile.cpp
benchmarks/: REPORT.md  data.json
cmake/: CompilerWarnings.cmake  Coverage.cmake  StandardProjectSettings.cmake
docs/: DEPLOYMENT.md  HNSW.md  HNSW_OPTIMIZATION.md
include/redboxdb/: SpecificMetadata.hpp  VectorPoint.hpp  cluster_manager.hpp  cpu_features.hpp  distance.hpp  engine.hpp  hnsw_manager.hpp  metadata_store.hpp  storage_manager.hpp  version.hpp
redbox-sdk/: README.md  setup.py
redbox-sdk/redboxdb/: __init__.py  client.py
sql/: schema.sql
src/: CMakeLists.txt  engine.cpp  main.cpp  metadata_store.cpp  server.cpp
tests/: CMakeLists.txt  test_extended.cpp  test_hnsw.cpp  test_main.cpp  test_metadata_store.cpp  verify_hnsw.cpp
