add_executable(RedBoxBenchmark benchmark.cpp)
target_link_libraries(RedBoxBenchmark PRIVATE RedBoxDbLib)
set_project_warnings(RedBoxBenchmark)

add_executable(InsertMicro insert_micro.cpp)
target_link_libraries(InsertMicro PRIVATE RedBoxDbLib)
include(CheckCXXCompilerFlag)
if(MSVC)
    check_cxx_compiler_flag("/arch:AVX2" REDBOXDB_HAS_AVX2_FLAG)
else()
    check_cxx_compiler_flag("-mavx2 -mfma" REDBOXDB_HAS_AVX2_FLAG)
endif()
if(REDBOXDB_HAS_AVX2_FLAG)
    if(MSVC)
        target_compile_options(InsertMicro PRIVATE /arch:AVX2)
    else()
        target_compile_options(InsertMicro PRIVATE -mavx2 -mfma)
    endif()
endif()
set_project_warnings(InsertMicro)

add_executable(QpsBench qps_bench.cpp)
target_link_libraries(QpsBench PRIVATE RedBoxDbLib)
set_project_warnings(QpsBench)

add_executable(SearchProfile search_profile.cpp)
target_link_libraries(SearchProfile PRIVATE RedBoxDbLib)
if(REDBOXDB_HAS_AVX2_FLAG)
    if(MSVC)
        target_compile_options(SearchProfile PRIVATE /arch:AVX2)
    else()
        target_compile_options(SearchProfile PRIVATE -mavx2 -mfma)
    endif()
endif()
set_project_warnings(SearchProfile)

add_executable(BenchExtended bench_extended.cpp)
target_link_libraries(BenchExtended PRIVATE RedBoxDbLib spdlog::spdlog Threads::Threads)
set_project_warnings(BenchExtended)

add_executable(BenchServerConcurrent bench_server_concurrent.cpp)
target_link_libraries(BenchServerConcurrent PRIVATE Threads::Threads)
if(WIN32)
    target_link_libraries(BenchServerConcurrent PRIVATE ws2_32)
endif()
set_project_warnings(BenchServerConcurrent)

add_executable(CiBench ci_bench.cpp)
target_link_libraries(CiBench PRIVATE RedBoxDbLib spdlog::spdlog Threads::Threads)
set_project_warnings(CiBench)